# Distance-3-Toric-code-Qiskit

./: README.md  pyproject.toml  requirements.txt  run_toric_demo.py  toric_code_qiskit_mwpm_clifford.ipynb
notebooks/: toric_code_qiskit_mwpm_clifford.ipynb
tests/: test_toric_helpers.py
toric_qec/: __init__.py  circuits.py  core.py  simulate.py
