[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toric-code-qiskit-demo"
version = "0.1.0"
description = "Distance-3 toric code simulation with Clifford circuits and MWPM decoding in Qiskit"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "qiskit>=1.0",
    "matplotlib>=3.7",
    "networkx>=3.0"
]

[tool.setuptools.packages.find]
include = ["toric*", "src*", "*"]
